a/mae__tis/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Flow+Circular&display=swap');

:root {
    --mainBackground: black;
    --mainColor: #F0F0F0;
    --secondaryColor: #F0F0F0AA;
    --mainAccentColor: #0A0A1F;
    --mainFont: ___;
    --secondaryFont: ___, var(--mainFont);
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
    user-drag: none;
    -webkit-user-drag: none
}

body {
    background: var(--mainBackground);
    color: var(--mainColor);
    font-family: "Poppins";
    font-weight: 800;
    font-size: 64;
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    align-content: center;
}

page {
    display: flex;
    flex-direction: column;
    background-color: var(--mainAccentColor);
    overflow: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
    align-content: center;
    align-items: center;
    transition: height 0.5s cubic-bezier(.75,0,.25,1) 0.5s, width 0.5s cubic-bezier(.75,0,.25,1) 0.5s, border-radius 0.5s cubic-bezier(.75,0,.25,1) 0.5s;
}

@media screen and (min-aspect-ratio: 0.74) {
    page {
        height: 95vh;
        width: calc(95vh/16*9);
        border-radius: 30px;
    }
}

@media screen and (max-aspect-ratio: 0.74) {
    page {
        height: 100vh;
        width: 100vw;
        border-radius: 0px;
    }
}

banner {
    width: calc(100% - 20px);
    aspect-ratio: 20/9;
    background: url(res/banner.jpg);
    background-size: cover;
    background-position: center;
    text-anchor: end;
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
    padding-right: 20px;
    margin-bottom: 20px;
}

page::-webkit-scrollbar {
  display: none;
}



socials {
    width: 90%;
    display: flex;
    height: 64px;
    justify-content: space-evenly;
    flex-wrap: nowrap;
    flex-direction: row;
    align-items: center;
}

socials > * {
    background-color: #FFFFFF64;
    height: 100%;
    min-width: 64px;
    max-width: 100%;
    border-radius: 16px;
    display: flex;
}

newest {
    --tracks:attr(tracks integer, 0);
    height: fit-content;
    width: calc(90% - 28px);
    border-radius: 15px;
    font-size: 16px;
    background: var(--RELEASEPrimaryColor);
    color: var(--RELEASESecondaryColor);
    padding: 14px;
    margin-bottom: 10px;
    rel {
        display: flex;
        flex-direction: row;
        align-items: flex-start;
    }
}
newest:has(tracks)>rel {margin-bottom: 20px;}

newest.unloaded {
    animation-duration: 1.7s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    animation-name: placeholderAnimate;
    background: #f6f7f8;
    background: linear-gradient(to right, #444 3.125%, #666 28.125%, #888 51.5625%, #666 75%, #444 100%);
    background-size: 1300px;
}

@keyframes placeholderAnimate {
    0%{ background-position: -650px 0; }
    100%{ background-position: 650px 0; }
}

newest > rel > cover {
    background: #000;
    height: 100px;
    aspect-ratio: 1;
    border-radius: 15px;
    margin-right: 15px;
    background-size: contain !important;
}

newest.unloaded {
    font-family: "Flow Circular";
}

info1 {
    top: -5px;
    position: relative;
    font-weight: 300;
}

relinfo {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100px;
}

info2>* {
    display: block;
}

info2>relartist {
    font-size: 10px;
    font-weight: 500;
}

info2>reltitle {
    font-size: 24px;
    font-weight: 900;
    line-height: 1;
}

newest.unloaded info1 {
    margin-left: 3px;
}

newest.unloaded reltitle {
    margin-left: 5px;
}

newest.unloaded relartist {
    margin-left: 2px;
}

info2>extrainfo {
    font-weight: 300;
    font-size: 8px;
    text-transform: uppercase;
}

newest.unloaded extrainfo {
    margin-left: 2px;
}

info2>extrainfo>*:not(:last-child)::after {
    content: "·";
    margin: 0px 2.5px;
    font-weight: 900;
    white-space-collapse: break-spaces;
}

newest.unloaded info2>extrainfo>*:not(:last-child)::after {
    content: "·";
    margin: 0px 10px 0px 10px;
    font-weight: 900;
    white-space-collapse: break-spaces;
}

relinfo a:not(:hover), tracks a:not(:hover) {
    color: inherit;
    text-decoration: none;
}

relinfo a:hover, tracks a:hover {
    color: inherit;
    text-decoration: underline 0.25px;
}

artistmain::before, artistfeat::before {content: ", "}
artistmain:last-of-type::before, artistfeat:last-of-type::before {content: " & "}
artistmain:first-of-type::before {content: ""}
artistfeat:first-of-type::before {content: " feat. "}

info1>id {
    font-size: 9px;
    line-height: 5px;
    font-weight: 500;
    font-style: italic;
}

.unloaded info1>id {
    right: 0.5px;
    position: relative;
    font-style: normal;
}

newest.explicit>rel>relinfo>info2>reltitle {
    display: flex;
    flex-direction: row;
    align-items: center; 
}

newest.explicit>rel>relinfo>info2>reltitle::after, newest tracks>reltrack.explicit data>name::after{
    text-transform: uppercase;
    color: var(--RELEASEPrimaryColor);
    background: var(--RELEASESecondaryColor);
    border-radius: 5px;
    font-family: "Poppins";
    font-weight:800;
}

newest.explicit>rel>relinfo>info2>reltitle::after {
    content: "explicit";
    font-size: 10px;
    margin-left: 10px;
    padding: 3px 5px;
}

newest tracks>reltrack.explicit data>name::after {
    content: "e";
    font-size: 9px;
    margin-left: 5px;
    padding: 1.5px 4px;
    position: relative;
    top: -3px;
    font-weight: 900;
}

newest tracks {
    font-weight: 300;
}

newest tracks>reltrack index::after {
    content: ".";
}

newest tracks>reltrack index {
    width: 40px;
    display: flex;
    align-items: center;
    font-size: 16px;
}

newest tracks>reltrack {display: flex;justify-content: space-between;padding: 0px 13px;align-items: center;height: 30px;font-size: 20px;}

newest tracks>reltrack data {
    display: flex;
    flex-direction: column;
    position: relative;
    height: 35px;
    justify-content: space-between;
}

newest tracks>reltrack data>name {
    font-size: 14px;
}

newest tracks>reltrack data>artists {
    font-size: 8px;
    position: relative;
    top: -5px;
}

newest tracks>reltrack>left {
    display: flex;
    flex-direction: row;
}

newest tracks playtime {
    font-size: 12px;
}

newest tracks>reltrack:not(:last-of-type) {
    margin-bottom: 10px;
}

newest:has(tracks) hr {
    margin: 15px 10px;
    border-color: var(--RELEASESecondaryColor);
}

newest:not(:has(tracks)) hr {
    display: none;
}

release {
    width: calc(90% - 40px);
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    flex-wrap: wrap;
    justify-content: center;
    background-size: cover;
    background-position: center;
    min-height: 40px;
    border-radius: 15px;
    color: var(--RELEASESecondaryColor);
    margin-bottom: 10px;

    reltitle {
        font-size: 24px;
        font-weight: 900;
        line-height: 1;
    }
    
    relartist {
        font-size: 10px;
        font-weight: 500;
    }
    
    id {
        font-size: 8px;
        font-weight: 500;
        line-height: 16px;
    }
    a {
        color: unset;
    }
    a:not(:hover) {
        text-decoration: none;
    }
    a:hover {
        text-decoration: underline;
    }
}

